# embassy-rp-pico

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
.zed/: settings.json
src/: allocator.rs  defmt_usb.rs  main.rs  usb.rs
