[package]
name = "embassy-rp-pico"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
cyw43 = { version = "0.7.0", features = ["log"] }
cyw43-pio = "0.10.0"
embassy-embedded-hal = "0.6.0"
embassy-executor = { version = "0.10.0", features = [
    "log",
    "platform-cortex-m",
    "executor-thread",
] }
embassy-futures = { version = "0.1.2", features = ["log"] }
embassy-net = { version = "0.9.1", features = ["log", "tcp", "udp", "dhcpv4"] }
embassy-rp = { version = "0.10.0", features = [
    "log",
    "rp2040",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-time = { version = "0.5.1", features = ["log"] }
embassy-usb = { version = "0.6.0", features = ["log"] }
embassy-usb-logger = "0.6.0"
embedded-io-async = "0.7.0"
fixed = "1.31.0"
fixed-macro = "1.2.0"
log = "0.4.29"
panic-halt = "1.0.0"
# futures = { version = "0.3.32", default-features = false, features = [
#     "async-await",
#     "cfg-target-has-atomic",
#     "unstable",
# ] }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
